Fix Snackbar notice bottom margin. (#18858)
* Fix Snackbar notice bottom margin.

With the block breadcrumbs introduced in the footer of the block editor, the snackbar notices are being cut off. This PR fixes the bottom margin for Snackbar notices.

* Use bottom property instead of margin-bottom.

--- a/packages/edit-post/src/components/layout/style.scss
+++ b/packages/edit-post/src/components/layout/style.scss
@@ -15,7 +15,7 @@
 .edit-post-layout .components-editor-notices__snackbar {
 	position: fixed;
 	right: 0;
-	bottom: 20px;
+	bottom: 40px;
 	padding-left: 16px;
 	padding-right: 16px;
 }
